Swagger funcionando completo
